# Plotter

./: .gitmodules
hardware/include/: constants.h  gantry.h  util.hpp
hardware/src/: gantry.cpp  main.cpp
slicer/: CMakeLists.txt  main.cpp  serialUtils.hpp
